--- a/less/common.less
+++ b/less/common.less
@@ -1024,6 +1024,9 @@ span.highlight{
 .swiperReduceBottomPadding{
 	padding-bottom:6%!important;	
 }
+.disable-scroll{
+	overflow:hidden!important;	
+}
 @keyframes makeDropdown{
 
   /*0%{
