--- a/app/modules/common/views/header.html
+++ b/app/modules/common/views/header.html
@@ -6,7 +6,7 @@
         </div>
         <h1 ng-if="title"><span class="mainTitle" ng-bind="title"></span><span class="nextline" ng-bind="subHeader" click-redirect="{{redirectURL}}"></span></h1>
           <ul class="nav navbar-nav navbar-right">
-            <li ng-if="(!getStarted && !menu) && !loggedIn"><a href="#/gettingStarted" class="fin-btn start-btn">GET STARTED</a></li>
+            <li ng-if="(!getStarted && !menu) && !loggedIn"><a click-redirect="/gettingStarted" href="javascript:void(0)" class="fin-btn start-btn">GET STARTED</a></li>
             <li ng-if="(getStarted && !menu) && !loggedIn"><p>Already have an account?</p></li>
             <li ng-if="!menu && !loggedIn"><a href="javascript:void(0)" click-redirect="/" class="fin-link log-in">LOG IN</a></li>
             <li ng-if="loggedIn" class="dropdown fin-dropdown"><a href="javascript:void(0)" class="fin-link log-in" data-toggle="dropdown"><span class="label">Logged in as </span><span class="name" ng-bind="userDetails.user['name']" ng-if="(userDetails.user['name'] !='')&&(userDetails.user['email'] =='')"></span>
