--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -3394,6 +3394,45 @@ span.error-text {
 .swiper-guage .gauge-result .result-header p span.pigy-icon img {
   width: 100%;
 }
+.swiper-guage .gauge-result:last-child {
+  margin-right: 0px;
+  width: 40%;
+}
+.swiper-guage .gauge-result:last-child .meter-widget-cover {
+  height: 456px;
+  padding-left: 7%;
+}
+.swiper-guage .gauge-result:last-child .meter-widget-cover .highcharts-xaxis-labels {
+  font-family: 'Roboto-Bold';
+  color: #000;
+  font-weight: normal;
+  font-size: 0.875em;
+}
+.swiper-guage .gauge-result:last-child .meter-widget-cover .highcharts-yaxis .highcharts-axis-title {
+  font-family: 'Roboto-Bold';
+  color: #000;
+  font-weight: normal;
+  font-size: 1em;
+}
+.swiper-guage .gauge-result:last-child .meter-widget-cover .chartTooltip {
+  display: inline-block;
+}
+.swiper-guage .gauge-result:last-child .meter-widget-cover .chartTooltip span.chartYear {
+  font-family: 'Roboto-Regular';
+  font-size: 12px;
+}
+.swiper-guage .gauge-result:last-child .meter-widget-cover .chartTooltip span.content {
+  font-family: 'Roboto-Bold';
+  margin-right: 10px;
+}
+.swiper-guage .gauge-result:last-child .meter-widget-cover .chartTooltip .content-first span.currency,
+.swiper-guage .gauge-result:last-child .meter-widget-cover .chartTooltip .content-first span.amount {
+  color: #62bb46;
+}
+.swiper-guage .gauge-result:last-child .meter-widget-cover .chartTooltip .content-secound span.currency,
+.swiper-guage .gauge-result:last-child .meter-widget-cover .chartTooltip .content-secound span.amount {
+  color: #047bc1;
+}
 .swiper-guage .fin-btn-group {
   margin-top: 5%;
   width: 70%;
@@ -4115,6 +4154,18 @@ section.quickInvest .started {
 .meter-widget-cover .equity {
   color: #cb624d!important;
 }
+.meter-widget-cover .graph-header {
+  padding-top: 18px;
+  padding-bottom: 30px;
+}
+.meter-widget-cover .graph-header h4 {
+  font-family: 'Roboto-Bold' !important;
+  font-size: 1em;
+  margin-bottom: 0px;
+}
+.meter-widget-cover .graph-header p {
+  font-size: 2.5em !important;
+}
 .meter-widget-cover .meter-header {
   padding-bottom: 4%;
 }
@@ -4179,7 +4230,7 @@ section.quickInvest .started {
   height: 348px;
   position: relative;
   margin: 0 auto;
-  margin-top: 28%;
+  margin-top: 100px;
 }
 .meter-widget-cover .guage .guage-image {
   position: absolute;
