--- a/less/widgets.less
+++ b/less/widgets.less
@@ -14,6 +14,18 @@
 	.equity{
 		color:#cb624d!important;
 	}
+	.graph-header{
+		padding-top:18px;
+		padding-bottom:30px;
+		h4{
+			font-family :'Roboto-Bold'!important;
+			.PIXEL2EM(16);
+			margin-bottom:0px;
+		}
+		p{
+			.PIXEL2EM(40)!important;
+		}
+	}
 	.meter-header{
 		padding-bottom: 4%;
 		.text-right{
@@ -77,7 +89,7 @@
 		height: 348px;
 		position:relative;
 		margin: 0 auto;
-		margin-top: 28%;
+		margin-top: 100px;
 		.guage-image{
 			position: absolute;
 			top:0px;
