--- a/app/modules/planinvestment/modules/earnInterest/views/earnInterestStart.html
+++ b/app/modules/planinvestment/modules/earnInterest/views/earnInterestStart.html
@@ -20,7 +20,7 @@
 	<div class="col-xs-12 bottom-desc">
 		<div class="fin-btn-group addMargin text-left">
             <button click-redirect="/planInvest" class="fin-link-btn content-prev text-left"><span><img src="assets/images/startedArrow.png"></span>CONTINUE PLANNING</button>
-            <button click-redirect="/dashboard" class="fin-app-btn fin-orange">CONTINUE</button>
+            <button click-redirect="/earnInterest" class="fin-app-btn fin-orange">CONTINUE</button>
         </div>
 	</div>
 </section>
