--- a/less/common.less
+++ b/less/common.less
@@ -1024,6 +1024,13 @@ span.highlight{
 .swiperReduceBottomPadding{
 	padding-bottom:6%!important;	
 }
+.fg-red {
+  color: rgb( 242, 41, 41 );
+}
+
+.no-padding {
+  padding: 0px;
+}
 @keyframes makeDropdown{
 
   /*0%{
