--- a/less/smartpolio.less
+++ b/less/smartpolio.less
@@ -302,6 +302,20 @@ section{
 				width:92%;
 		  	}
 		}
+		.scheme-compare-other {
+		  height:398px !important;
+		  padding: 4% 8% !important;
+		}
+
+		.schemeRating {
+		  width : 20%;
+		  padding-top:10%;
+		}
+		.sensex-status {
+		  font-size: 48px;
+		  font-family: "PlayfairDisplay";
+		  line-height: 0.75;
+		}
 	}
 }
 
