--- a/app/modules/smartportfolio/views/schemeComparision.html
+++ b/app/modules/smartportfolio/views/schemeComparision.html
@@ -142,7 +142,48 @@
 			</ul>
 			<hc-chart ng-if="resultSet" items="resultSet"></hc-chart>
 			<p class="text-right"><span class="addOnlyBold">Rs 10,000</span> invested on {{resultSet[0]['data'][0]['date']}} would be <span class="content" ng-if="$root.nav">Rs.<span class="addOnlyBold">{{$root.nav.amount | currency:''}}</span> on {{$root.nav.date}}</span></p>
-		</div>		
+		</div>	
+		<div class="schemes-cover chart-cover scheme-compare-other" ng-show="setChartValue == 'OTHERS'" >
+			<div class="schemes-inner col-xs-12">
+				<div class="col-xs-12">
+					
+					<h3 class="pull-left">SBI Bluechip Fund Regular Growth</h3>
+					<p class="pull-right">AUM Size
+					<span class="highlight nextline">9534 Cr</span>
+					</p>
+					<div class="list-details">
+						<div class="table schemeCompareTable">
+							<div class="thead">
+								<div class="tr">
+									<div class="th">
+										<p>1 Year Return</p>
+									</div>
+									<div class="th">
+										<p>3 Year Return</p>
+									</div>
+									<div class="th">
+										<p>5 Year Return</p>
+									</div>
+								</div>
+							</div>
+							<div class="tbody">
+								<div class="tr">
+									<div class="td">
+										<p>14.30%</p>
+									</div>
+									<div class="td">
+										<p>14.30%</p>
+									</div>
+									<div class="td">
+										<p>14.30%</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>	
 	</div>
 	<div class="fin-btn-group addMargin">
 	    <button click-redirect="/educationStarted" class="fin-link-btn content-prev"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
