--- a/app/modules/registerinvestor/views/registerInvestorInfo.html
+++ b/app/modules/registerinvestor/views/registerInvestorInfo.html
@@ -5,7 +5,7 @@
                 <img src="assets/images/investerRegistration.png">
             </div>
             <h1 class="pull-left slider-description">Investor Registration</h1>
-            <h2 class="pull-left">Hold up! We need some information before we can get you started.</h2>
+            <h2 class="pull-left">Hold up! You need to provide the following information before you can invest.</h2>
             <div class="checklist-cover col-xs-12">
                 <div class="row">
                     <div class="col-xs-3">
