--- a/less/common.less
+++ b/less/common.less
@@ -1028,7 +1028,7 @@ span.highlight{
   color: rgb( 242, 41, 41 );
 }
 .no-padding {
-  padding: 0px;
+  padding: 0px !important;
 }
 .disable-scroll{
 	overflow:hidden!important;	
