--- a/app/modules/registerinvestor/views/registerInvestorStarted.html
+++ b/app/modules/registerinvestor/views/registerInvestorStarted.html
@@ -5,6 +5,8 @@
                 <img src="assets/images/investerRegistration.png">
             </div>
             <h1 class="pull-left slider-description">Investor Registration</h1>
+            <h2 class="pull-left">As per regulations, you need to complete a one-time<span class="nextline"> Investor Registration process before investing. We will</span> guide you through that in a few simple steps. 
+            </h2>    
             <h2 class="pull-left">Please keep the following ready at hand.</h2>
             <div class="col-xs-12 documents-outer-cover">
                 <div class="row">
