--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -10,6 +10,11 @@
 input::-webkit-calendar-picker-indicator {
   display: none;
 }
+.mCSB_container {
+  width: 100%!important;
+  left: 0!important;
+  right: 0!important;
+}
 html,
 body {
   font-family: 'Roboto-Regular';
