--- a/less/common.less
+++ b/less/common.less
@@ -37,6 +37,11 @@ input::-webkit-calendar-picker-indicator {
 html,body{
 	
 }	
+.mCSB_container{
+	width:100%!important;
+	left:0!important;
+	right:0!important;	
+}
 html,body{
 	.GLOBAL_FONT_STYLE('Roboto-Regular',@black,normal);
 	width: 100%;
