--- a/less/common.less
+++ b/less/common.less
@@ -982,6 +982,12 @@ span{
         .PIXEL2EM(20)!important;
 	}
 }
+.imageThumbnail{
+	position: absolute;
+	top: 9%;
+	left: 22%;
+	width:100px;	
+}
 span.highlight{
 	color:#f26529;
 }
