--- a/less/widgets.less
+++ b/less/widgets.less
@@ -579,3 +579,18 @@ input{
 		}
 	}	
 }
+#signitureModal{
+	.modal-dialog{
+		width:30%;
+	}
+	.modal-content{
+		width:100%;
+	}
+	.modal-wrapper{
+		padding:20px;
+	}
+	.signature{
+		margin:0 auto;
+		margin-bottom: 20px;
+	}
+}
