--- a/app/modules/registerinvestor/views/registerInvestorConfirmation.html
+++ b/app/modules/registerinvestor/views/registerInvestorConfirmation.html
@@ -6,7 +6,7 @@
                 <div class="swiper-content no-padding">
                   <h3 class="slider-description">Please sign or upload a photo of your signature</h3>
                   <div class="col-xs-5">
-                    <div class="upload-image-cover">
+                    <div class="upload-image-cover" ng-click="showSigniture()">
                       <div class="image-div">
                           <img src="assets/images/investorregistration_sign.png">
                       </div>
@@ -46,6 +46,19 @@
         <div class="image-backdrop"><img src="assets/images/investerRegistration.png"></div>
         <p>Investor Registration</p>
     </div>
-    
 </div>
+  <div class="modal fade fade-scale" id="signitureModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="fadeIn modal-wrapper">
+        <button data-dismiss="modal" class="modal-close"></button>
+        <signature-pad accept="accept" clear="clear" height="250" width="320"></signature-pad>
+        <div class="fin-btn-group">
+          <button class="fin-app-btn fin-skip-btn pull-left" ng-click="clear()">CLEAR</button>
+          <button class="fin-app-btn fin-orange pull-right" ng-click="done()">DONE</button>
+        </div>        
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
