--- a/less/common.less
+++ b/less/common.less
@@ -1035,6 +1035,9 @@ span.highlight{
 .no-padding {
   padding: 0px !important;
 }
+.paddingTop2 {
+	padding-top:2% !important;
+}
 .disable-scroll{
 	overflow:hidden!important;	
 }
