--- a/app/modules/registerinvestor/views/registerInvestorConfirmation.html
+++ b/app/modules/registerinvestor/views/registerInvestorConfirmation.html
@@ -1,11 +1,13 @@
 <section class="fadeIn quickInvest registerInvestor">
 <div class="fadeIn swiper-container registerInvestorConfirm customSwiper investorInfo type2Sliders" ng-init="step = 1">
     <div class="swiper-wrapper">
-        <div class="swiper-slide">
+        <div class="swiper-slide content-main-header">
             <form name="invertorInfoForm1" novalidate>
                 <div class="swiper-content no-padding">
-                  <h3 class="slider-description">Please sign or upload a photo of your signature</h3>
-                  <div class="col-xs-5">
+                  <div class="col-xs-12">
+                    <h2 class="slider-description">Please sign or upload a photo of your signature</h2>
+                  </div>
+                  <div class="col-xs-4">
                     <div class="upload-image-cover">
                       <div class="image-div">
                           <img src="assets/images/investorregistration_sign.png">
@@ -13,9 +15,10 @@
                       <p class="text-center">Sign</p>
                     </div>
                   </div>
-                  <div class="col-xs-12 form-group">
+                  <div class="col-xs-12">
                     <p>Note: The above signature will be used to digitally sign the investor application form</p>
                   </div>
+                  <div class="col-xs-12">
                   <p>
                     <div class="checkbox-cover">
                         <input type="checkbox" required id="option1Type1" name="option1" ng-model="modelVal.A8" value="op1">
@@ -24,11 +27,18 @@
                   </p>
                   <p>
                     <div class="checkbox-cover">
-                        <input type="checkbox" required id="option1Type1" name="option1" ng-model="modelVal.A8" value="op1">
-                        <label class="" for="option1Type1"><span></span>I have read the Terms & Conditions of Use, and I hereby allow Finaskus Technologies Pvt Ltd to utilize the information preceding to fulfill my investment request and comply with the legal and regulatory requirements.</label>
+                        <input type="checkbox" required id="option1Type2" name="option1" ng-model="modelVal.A9" value="op1">
+                        <label class="" for="option1Type2">
+                          <div class="pull-left checkbox-width">
+                            <span></span>
+                          </div>
+                          <div class="col-xs-5 no-padding ">
+                          I have read the Terms & Conditions of Use, and I hereby allow Finaskus Technologies Pvt Ltd to utilize the information preceding to fulfill my investment request and comply with the legal and regulatory requirements.
+                          </div>
+                        </label>
                     </div>
                   </p>
-
+                  </div>
                 </div>
             </form>
             <div class="bubble">
@@ -46,6 +56,11 @@
         <div class="image-backdrop"><img src="assets/images/investerRegistration.png"></div>
         <p>Investor Registration</p>
     </div>
-    
+    <div class="col-xs-12">
+        <div class="fin-btn-group">
+            <button class="fin-link-btn content-prev" ng-click="(step != 1) && (step = step - 1)"><span><img src="assets/images/startedArrow.png"></span>REVIEW INFO</button>
+            <button ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
+        </div>
+    </div>
 </div>
 </section>
