--- a/less/registerInvestor.less
+++ b/less/registerInvestor.less
@@ -5,6 +5,11 @@ section{
 				width:16%;
 			}
 		}
+		.reviewList {
+			p{
+				color: #046baa;
+			}
+		}
 		.documents-outer-cover{
 			.documents-cover{
 				&:first-child{
