--- a/less/widgets.less
+++ b/less/widgets.less
@@ -592,5 +592,11 @@ input{
 	.signature{
 		margin:0 auto;
 		margin-bottom: 20px;
+		width:320px!important;
+		height:250px!important;
+		canvas{
+			width:320px!important;
+			height:250px!important;
+		}
 	}
 }
