--- a/app/modules/registerinvestor/views/registerInvestorConfirmation.html
+++ b/app/modules/registerinvestor/views/registerInvestorConfirmation.html
@@ -17,7 +17,7 @@
                     </div>
                   </div>
                   <div class="col-xs-12">
-                    <p>Note: The above signature will be used to digitally sign the investor application form</p>
+                    <p class="paddingTop2">Note: The above signature will be used to digitally sign the investor application form</p>
                   </div>
                   <div class="col-xs-12">
                   <p>
