--- a/less/trackperformance.less
+++ b/less/trackperformance.less
@@ -307,3 +307,13 @@ section{
 		}
 	}
 }
+#finGoalStatusModal{
+	.modal-dialog{
+	width:60%;
+	.modal-content{
+		.modal-wrapper{
+			padding: 7% 4% 8% 4%;
+		}
+	}
+	}
+}
